Editor: Implement select current/next word in multi-caret sessions http://bugs.activestate.com/show_bug.cgi?id=99924 r=marky sr=toddw rn=
(integrated from komodo (trunk) change 81553 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13503 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -42,8 +42,10 @@
 <!ENTITY aboutMenu.accesskey "A">
 <!ENTITY aboutName.accesskey "A">
 <!ENTITY add.label "Add">
-<!ENTITY addAdditionalCaret.label "Add As Additional Caret/Selection">
+<!ENTITY addAdditionalCaret.label "Multiple Selection - Add">
 <!ENTITY addAdditionalCaret.desc "Editor: Add Current Selection or Caret to a Multi-Caret Set">
+<!ENTITY addNextWordToCaretSet.label "Multiple Selection - Add Next Occurrence">
+<!ENTITY addNextWordToCaretSet.desc "Editor: Add Next Word to a Multi-Caret Set">
 <!ENTITY addAsSnippetInToolbox.label "Add as Snippet into Toolbox">
 <!ENTITY browseForDirectoriesToAddToSearchList.tooltiptext "Browse for directories to add to search list">
 <!ENTITY browserPreview.menu.accesskey "B">
