Editor: After pressing tab, if we either indented/dedented a region, or inserted a tab, update the caretX setting (driven by a pref in Editor/Smart Editing. http://bugs.activestate.com/show_bug.cgi?id=95409 r=toddw rn=
(integrated from komodo (trunk) change 81689 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13554 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -400,6 +400,8 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY remoteAccounts.label "Remote Accounts">
 <!ENTITY remove.label "Remove">
 <!ENTITY removeCatalog.label "Remove catalog">
+<!ENTITY repositionCaretAfterTab.label "Reposition &quot;caret&quot; after pressing tab.">
+<!ENTITY repositionCaretAfterTab.tooltiptext "After pressing tab, should an arrow key be based on the old location or the current one?">
 <!ENTITY requestVariable.label "Request Variable">
 <!ENTITY reset.label "Reset">
 <!ENTITY resetLanguageToTheDefaultForThisFileType.tooltiptext "Reset language to the default for this file type.">
