Editor: Add a pref to control when a tab press skips over soft characters. http://bugs.activestate.com/show_bug.cgi?id=95685 r=marky rn=
(integrated from komodo (trunk) change 81748 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13581 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -231,6 +231,7 @@
 <!ENTITY enableSoftCharacters.description "Inserts closing characters or matching delimiters.
 For example, when entering '(', automatically add a closing ')' after the cursor.">
 <!ENTITY enableSmartSoftCharactersInsideLine.label "Enable soft characters inside lines">
+<!ENTITY enableSmartTabSkipsSoftCharacters.label "Pressing tab moves to right of soft characters">
 <!ENTITY cutCopyWithoutSelection.label "Cut/Copy with no selection will cut/copy the current line">
 <!ENTITY enableTriggeringOfMacrosOnKomodoEvents.label "Enable triggering of macros on Komodo events">
 <!ENTITY enableViEmulation.label "Enable Vi emulation">
