Colour picker:  create keybinding to launch colour picker with out existing hex colour http://bugs.activestate.com/show_bug.cgi?id=99413 r=marky rn=
(integrated from komodo (trunk) change 82148 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13681 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/editor.properties
+++ b/src/chrome/komodo/locale/en-US/editor.properties
@@ -51,3 +51,5 @@ htmlRelocatorNoEnd=Could not find end tag.  Moving tag to end of document.
 htmlRelocatorLostContext=Lost tag context. Reseting htmlTagRelocator.
 htmlRelocateNotInTagNotCosed=Tag is not closed or not running inside a tag.
 htmlRelocateRmVars=Resetting view._htmlRelocator variables.
+
+Editor cursor not on color=Editor cursor currently isn't on a color spec.
