Manually integrate r82148 	Colour picker:  create keybinding to launch colour picker with out existing hex colour 	http://bugs.activestate.com/show_bug.cgi?id=99413 	r=marky 	rn=
git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13682 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -148,6 +148,7 @@
 <!ENTITY editorInsertNextKeyAsLiteralCharacter.desc "Editor: Insert Next Key as Literal Character">
 <!ENTITY editorInsertSnippetByName.desc "Editor: Insert Abbreviation Snippet by Name">
 <!ENTITY editorJoinCurrentAndNextLines.desc "Editor: Join current and next lines">
+<!ENTITY editorLaunchColorPicker.desc "Editor: Launch the Color Picker">
 <!ENTITY editorMoveBackPartOfWord.desc "Editor: Move Back Part of Word">
 <!ENTITY editorMoveForwardPartOfWord.desc "Editor: Move Forward Part of Word">
 <!ENTITY editorMoveLeftOneCharacter.desc "Editor: Move Left One Character">
