When a snippt throws ko.snippets.RejectedSnippet with an argument, make sure that argument shows up in the status bar/notification panel messages. http://bugs.activestate.com/show_bug.cgi?id=100978 r=marky rn=
(integrated from komodo (trunk) change 82641 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13853 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/library.properties
+++ b/src/chrome/komodo/locale/en-US/library.properties
@@ -6,6 +6,7 @@ snippet exception details 2=In snippet: %S
 snippet exception details 3=Near line#: %S
 Error in snippet=Error in snippet
 snippet X insertion deliberately suppressed=Insertion of snippet '%S' deliberately suppressed
+snippet X insertion deliberately suppressed with reason=Insertion of snippet '%S' deliberately suppressed: %S
 snippet X inserted=snippet '%S' inserted
 Edit Snippet=Edit Snippet
 
