Macros: Show syntax and runtime error messages in macros in terms of the line number in the macro, not an offset into peMacro.js http://bugs.activestate.com/show_bug.cgi?id=95519 r=marky sr=toddw rn= Unfortunately I can't emit N spaces followed by a "^" under the line in question, where N is ex.columnNumber, because the font is usually proportional.
(integrated from komodo (trunk) change 82910 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13933 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/project/macro.properties
+++ b/src/chrome/komodo/locale/en-US/project/macro.properties
@@ -8,3 +8,12 @@ Macro was modified=Macro was modified
 namedProperties='%S' Properties
 unnamedProperties=Unnamed '%S' Properties
 The custom icon specified for this X is missing=The custom icon specified for this %S is missing. Please choose another.
+running=running
+The current macro=The current macro
+compiling=compiling
+running=running
+X Error=%S Error
+X error in macro Y=%S Error in %S:
+X error in macro=%S Error in %S:
+Syntax=Syntax
+Runtime=Runtime
