--- a/src/chrome/komodo/locale/en-US/project/macro.properties
+++ b/src/chrome/komodo/locale/en-US/project/macro.properties
@@ -12,8 +12,8 @@ running=running
 The current macro=The current macro
 compiling=compiling
 running=running
-X Error=%S Error
-X error in macro Y=%S Error in %S:
-X error in macro=%S Error in %S:
+Macro X Error=Macro %S Error
+X error in macro Y=%S Error in macro "%S":
+X error in macro=%S Error in macro "%S":
 Syntax=Syntax
 Runtime=Runtime
