Syntax checking: Add support for pep8 checking of Python and Python3 files. http://bugs.activestate.com/show_bug.cgi?id=90056 r=marky rn=
(integrated from komodo (trunk) change 82926 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13941 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -384,6 +384,8 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY properties.label "Properties">
 <!ENTITY proportional.label "Proportional">
 <!ENTITY pyflakesChecking.label "Pyflakes Checking">
+<!ENTITY pep8CheckingStatus.label "Do pep8 Checking">
+<!ENTITY pep8RCFileLocation.label "Location of pep8 config file to use">
 <!ENTITY pylintCheckingStatus.label "Do Pylint Checking">
 <!ENTITY pylintRCFileLocation.label "Location of .pylintrc file to use">
 <!ENTITY pyPython.label ".py: Python">
