--- a/src/chrome/komodo/locale/en-US/project/peFile.properties
+++ b/src/chrome/komodo/locale/en-US/project/peFile.properties
@@ -6,14 +6,14 @@ dump=Dump
 errorCalculatingDifferences=Error calculating differences: 
 exportAsProjectFile=Export as Project File…
 exportPackage=Export Package…
-filePropertiesAndSettings=File Properties and Settings
+filePreferences=File Preferences
 filesizeTreeColLabel=Size
 find=Find…
-folderPropertiesAndSettings=Folder Properties and Settings
+folderPreferences=Folder Preferences
 makeOpenShortcut=Make "Open…" Shortcut
 open=Open…
 openFile=Open File
-projectPropertiesAndSettings=Project Properties and Settings
+projectPreferences=Project Preferences
 refreshStatus=Refresh Status
 rename=Rename…
 replace=Replace
