Editor: Show changes in open files - phase 3: display diffs as HTML in panels. http://bugs.activestate.com/show_bug.cgi?id=70081 r=marky rn= Annotations are gone.
(integrated from komodo (trunk) change 83705 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14191 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/views.properties
+++ b/src/chrome/komodo/locale/en-US/views.properties
@@ -72,3 +72,4 @@ newFileAddedAsText.template=The file %S could cause performance problems when vi
 OK.prompt=OK
 adding word x at line y column z=Adding word %S at line %S, column %S
 no more instances of x=No more instances of %S in the current document
+Click on the changebar for details=Click on the changebar for details.
