fix: Preferences: Add "proxy" to the label - so it can be easily searched for http://bugs.activestate.com/show_bug.cgi?id=102264
(integrated from komodo (trunk) change 83798 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14212 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -37,7 +37,7 @@
 <!ENTITY % autoAbbreviationName.name                "Auto-Abbreviation">
 <!ENTITY connection.label                "Connection">
 
-<!ENTITY connectionDesc.label            "Configure how Komodo connects to the Internet for updates, HTML Preview, etc.">
+<!ENTITY connectionDesc.label            "Configure HTTP Proxy settings for how Komodo connects to the Internet for updates, HTML Preview, etc.">
 <!ENTITY connectionSettings.label        "Settings...">
 <!ENTITY connectionSettings.accesskey    "e">
 
