commands: give the add-on dialog command a description * this is so it can be assigned a keybinding
(integrated from komodo (trunk) change 84005 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14239 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -821,6 +821,8 @@
 <!--
 <!ENTITY editorCopyCurrentLine.desc "Editor: Copy current line">
 -->
+<!ENTITY openAddonsDialog.desc "Add-ons: Open the addon dialog (extension manager)">
+
 
 <!-- Mac system menu definitions -->
 <!ENTITY menuSysMacServices.label "Services">
