macros: add menu and toolbar command to easily create a new macro
(integrated from komodo (trunk) change 84535 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14310 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -393,6 +393,11 @@
 <!ENTITY macro.label "Macro">
 <!ENTITY macroEndRecording.desc "Macro: End Recording">
 <!ENTITY macroExecuteLastMacro.desc "Macro: Execute Last Macro">
+<!ENTITY macroNew.menu.accesskey "C">
+<!ENTITY macroNew.menu.label "Create New Macro">
+<!ENTITY macroNew.toolbar.label "New Macro">
+<!ENTITY macroNew.tooltiptext "Create a new macro that can be saved into the toolbox">
+<!ENTITY macroNew.command.desc "Macro: Create a new Toolbox Macro">
 <!ENTITY macroPauseRecording.desc "Macro: Pause Recording">
 <!ENTITY macroSaveToToolbox.desc "Macro: Save to Toolbox">
 <!ENTITY macroStartResumeRecording.desc "Macro: Start/Resume Recording">
