fix: Find Results: Add ability to copy results to the clipboard http://bugs.activestate.com/show_bug.cgi?id=91733 rn=
(integrated from komodo (trunk) change 84941 by toddw)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@14347 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -88,6 +88,7 @@
 <!ENTITY copy.label "Copy">
 <!ENTITY copy.tooltiptext "Copy">
 <!ENTITY copyButton.accesskey "C">
+<!ENTITY copyFindResults.tooltiptext "Copy the find results to the clipboard">
 <!ENTITY createTemplateFromProject.label "Create Template From Project...">
 <!ENTITY createTemplateFromProject.accesskey "C">
 <!ENTITY currentFilePreferences.label "Current File Preferences...">
