Projects: give user the option to not delete a project from recent projects if it doesnt exist this is useful when projects are remotely hosted and the connection might not be active at the time that the project is opened rn=
(integrated from trunk branch change 6cea3cf by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/projectManager.properties
+++ b/src/chrome/komodo/locale/en-US/projectManager.properties
@@ -45,6 +45,7 @@ saveTheProjectAndContinue.message=Save the project and continue?
 projectsNeedToBeSavedBeforeExport.message=Projects need to be saved before Komodo will export them as a package.\nDo you want Komodo to save the project and continue?
 myTemplates.message=My Templates
 unableToLoadProject.alert=Unable to load project "%S": %S
+unableToLoadProjectRemoveConfirm.alert=Remove project from recent projects?
 makeActiveProject.label=Make Active Project
 closeProject.label=Close Project
 saveProject.label=Save Project
