--- a/src/modules/commando/locale/en-US/commando.dtd
+++ b/src/modules/commando/locale/en-US/commando.dtd
@@ -1,5 +1,5 @@
 <!ENTITY commando.label "Commando">
-<!ENTITY showCommando.desc "Show Commando">
+<!ENTITY showCommando.desc "Go to Anything">
 <!ENTITY commandoPrefs.desc "Commando Preferences">
 
 <!ENTITY searchScopes.label "Search Scopes">
