Initial commit: Workspace UI integration.
(integrated from master branch change 218cf1f by cgchoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -472,6 +472,10 @@
 <!ENTITY menuView.accesskey "V">
 <!ENTITY menuViewToolbarsAutoHide.label "Hide Toolbars">
 <!ENTITY menuWatchThread.accesskey "W">
+<!ENTITY menuWorkspace.accesskey "W">
+<!ENTITY menuWorkspaceSave.accesskey "S">
+<!ENTITY menuWorkspaceOpen.accesskey "O">
+
 <!ENTITY minimapZoomFontSizeReset.desc "Minimap: Zoom: Reset to Default Size">
 <!ENTITY minimapZoomFontSizeDown.desc "Minimap: Zoom Font Size Down">
 <!ENTITY minimapZoomFontSizeUp.desc "Minimap: Zoom Font Size Up">
@@ -745,6 +749,13 @@
 <!ENTITY userInterfaceShowHideToolbarButtonText.desc "User Interface: Show/Hide Toolbar Button Text">
 <!ENTITY userInterfaceShowHideRightPane.desc "User Interface: Show/Hide Right Pane">
 <!ENTITY userInterfaceShowHideToolboxTab.desc "User Interface: Show/Hide Toolbox Tab">
+
+<!ENTITY saveUserWorkspace.desc "Workspace: Save workspace to file.">
+<!ENTITY openUserWorkspace.desc "Workspace: Open workspace from file.">
+<!ENTITY menuWorkspace.label "Workspace">
+<!ENTITY menuSaveWorkspace.label "Save">
+<!ENTITY menuOpenWorkspace.label "Open">
+
 <!ENTITY userInterfaceShowHideToolsToolbar.desc "User Interface: Show/Hide Tools Toolbar">
 <!ENTITY userInterfaceShowHideMinimap.desc "User Interface: Show/Hide Editor Minimap">
 <!ENTITY userInterfaceShowHideWhitespace.desc "User Interface: Show/Hide Whitespace">
