UI: Further cleanup of context menu's (editor and tabs)
(integrated from trunk branch change 933dc00 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -519,6 +519,9 @@
 <!ENTITY openThisProject.label "Open Project">
 <!ENTITY openThisProjectInNewWindow.label "Open Project In New Window">
 <!ENTITY openRemoteProject.label "Open Remote Project...">
+<!ENTITY tabPlacement.label "Placement">
+<!ENTITY tabFileChanges.label "File Changes">
+<!ENTITY tabFileActions.label "File Actions">
 <!ENTITY openTabInNewWindow.label "Open in a New Window">
 <!ENTITY openURLInBrowser.label "Open URL In Browser">
 <!ENTITY openURLInTab.label "Open URL In Tab">
