--- a/src/chrome/komodo/locale/en-US/komodo.dtd
+++ b/src/chrome/komodo/locale/en-US/komodo.dtd
@@ -127,8 +127,8 @@
 <!ENTITY editorDeleteLine.desc "Editor: Delete Line">
 <!ENTITY editorDeleteWordLeft.desc "Editor: Delete Word Left">
 <!ENTITY editorDeleteWordRight.desc "Editor: Delete Word Right">
-<!ENTITY editorDuplicateLine.desc "Editor: Duplicate Line">
-<!ENTITY editorDuplicateLineOrSelection.desc "Editor: Duplicate Line or Selection">
+<!ENTITY editorDuplicateLineUp.desc "Editor: Duplicate Line/Selection Up">
+<!ENTITY editorDuplicateLineDown.desc "Editor: Duplicate Line/Selection Down">
 <!ENTITY editorEndOfLine.desc "Editor: End of Line">
 <!ENTITY editorExchangeCurrentPointAndMark.desc "Editor: Exchange Current Point and Mark">
 <!ENTITY editorGoToBeginningOfWord.desc "Editor: Go to Beginning of word">
@@ -210,7 +210,8 @@
 <!ENTITY editorToggleBookmark.desc "Editor: Toggle Bookmark">
 <!ENTITY editorToggleOvertypeInsertMode.desc "Editor: Toggle Overtype/Insert Mode">
 <!ENTITY editorTransposeCurrentAndPreviousCharacters.desc "Editor: Transpose Current and Previous Characters">
-<!ENTITY editorTransposeCurrentAndPreviousLines.desc "Editor: Transpose Current and Previous Lines">
+<!ENTITY editorTransposeLineUp.desc "Editor: Move (Transpose) Line/Selection Up">
+<!ENTITY editorTransposeLineDown.desc "Editor: Move (Transpose) Line/Selection Down">
 <!ENTITY editorTransposeCurrentAndPreviousWords.desc "Editor: Transpose Current and Previous Words">
 <!ENTITY editorTriggerPrecedingAutoCompleteListOrCallTip.desc "Editor: Trigger preceding AutoComplete list or CallTip">
 <!ENTITY editorUndo.desc "Editor: Undo">
