fix: Preferences: Default file encoding is now UTF-8 https://bugs.activestate.com/show_bug.cgi?id=90424 rn=
(integrated from master branch change 3cc51a6 by Todd Whiteman <toddw@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -573,7 +573,7 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 
 <!--pref-intl.xul-->
 <!ENTITY useEncodeEnvironment.label "Use encoding defined in environment:">
-<!ENTITY customEncoding.label "Custom encoding:">
+<!ENTITY defaultEncoding.label "Default encoding:">
 <!ENTITY dateTime.label "Date &amp; Time">
 <!ENTITY format.label "Format">
 <!ENTITY dateTimeExample.label "Example:">
