tab copy menu: update accesskey to be appropriate
(integrated from master branch change 79749ad by Todd Whiteman <toddw@activestate.com>)

--- a/src/chrome/komodo/locale/en-US/morekomodo/morekomodo.dtd
+++ b/src/chrome/komodo/locale/en-US/morekomodo/morekomodo.dtd
@@ -15,7 +15,7 @@
 <!ENTITY morekomodo.rename.desc "File - Rename">
 
 <!ENTITY make.backup.label "Make Copy...">
-<!ENTITY make.backup.accesskey "B">
+<!ENTITY make.backup.accesskey "C">
 <!ENTITY morekomodo.make.backup.desc "File - Copy">
 
 <!ENTITY delete.label "Delete...">
