Commando: Improve caching - stability, auto-clearing and manual clearing
(integrated from master branch change b74d0b0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/locale/en-US/commando.dtd
+++ b/src/modules/commando/locale/en-US/commando.dtd
@@ -1,5 +1,6 @@
 <!ENTITY commando.label "Commando">
 <!ENTITY showCommando.desc "Go to Anything">
 <!ENTITY commandoPrefs.desc "Commando Preferences">
+<!ENTITY clearCache.desc "Commando: Clear Cache">
 
 <!ENTITY searchScopes.label "Search Scopes">
