Prefs: You can now apply preferences without closing the preference window
rn=

(integrated from master branch change 5fa899b by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -97,6 +97,7 @@
 <!ENTITY L.accesskey "L">
 <!ENTITY MMinute0059.label "&#37;M : minute [00,59]">
 <!ENTITY OK.label "OK">
+<!ENTITY Apply.label "Apply">
 <!ENTITY PHP.label "PHP">
 <!ENTITY PHPDirectories.label "PHP Directories">
 <!ENTITY POST.label "POST">
