Icons: Icons are now generated from SVG's on-demand
This allows for proper HIDPI support across all icon colors as well as
allow more flexible control over icon color and states
rn=

(integrated from master branch change 86c65e0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -766,6 +766,12 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY skinDefault.label "Default">
 <!ENTITY iconset.label "Icon Set: ">
 <!ENTITY iconset.tooltip "Select what icon set Komodo should use. Note that selecting a skin may set the iconset selection to the best suited iconset for the skin.">
+<!ENTITY colored.value "Colored">
+<!ENTITY iconsetColor.label "Icon Colors:">
+<!ENTITY colorBase.label "Base">
+<!ENTITY colorToolbar.label "Toolbar">
+<!ENTITY colorWidgets.label "Widgets">
+<!ENTITY colorSelected.label "Selected">
 
 <!--pref-perl.xul-->
 <!ENTITY noPerlInterpreter.description "No Perl interpreter was found on your system. If you would like to debug and run Perl programs in Komodo you will need to install Perl. You can get Perl from ActiveState at">
