Find: Make pin tooltip more explanatory
https://bugs.activestate.com/show_bug.cgi?id=103650

(integrated from master branch change 731a21a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/locale/en-US/find.dtd
+++ b/src/chrome/komodo/locale/en-US/find.dtd
@@ -83,7 +83,7 @@
 <!ENTITY oneOrMoreOfThePrecedingBlock.label "+ : one or more of the preceding block">
 <!ENTITY oneOrMoreOfThePrecedingBlockNonGreedy.label "+? : one or more of the preceding block (non-greedy)">
 <!ENTITY options.label "Options">
-<!ENTITY pin.tooltiptext "Pin this window">
+<!ENTITY pin.tooltiptext "Pin this window (always on top)">
 <!ENTITY replace.label "Replace">
 <!ENTITY replaceAll.label "Replace All">
 <!ENTITY replaceAllButton.accesskey "A">
