--- a/src/chrome/komodo/locale/en-US/pref/pref.dtd
+++ b/src/chrome/komodo/locale/en-US/pref/pref.dtd
@@ -768,6 +768,7 @@ For example, when entering '(', automatically add a closing ')' after the cursor
 <!ENTITY iconset.tooltip "Select what icon set Komodo should use. Note that selecting a skin may set the iconset selection to the best suited iconset for the skin.">
 <!ENTITY colored.value "Colored">
 <!ENTITY iconsetColor.label "Icon Colors:">
+<!ENTITY skinEditorScrollbars.label "Skin Editor Scrollbars">
 <!ENTITY colorBase.label "Base">
 <!ENTITY colorToolbar.label "Toolbar">
 <!ENTITY colorWidgets.label "Widgets">
